[gd_scene load_steps=25 format=2]

[ext_resource path="res://images/withoutef.png" type="Texture" id=2]
[ext_resource path="res://fonts/pixelable.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://images/LOGO IGNIS.png" type="Texture" id=4]
[ext_resource path="res://scripts/menu.gd" type="Script" id=6]
[ext_resource path="res://images/gui/levels.png" type="Texture" id=7]
[ext_resource path="res://scenes/levels/tutorial.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/gui/levelscr.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/light/god.tscn" type="PackedScene" id=10]
[ext_resource path="res://images/tilesets/nature.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/tilebase.tscn" type="PackedScene" id=12]
[ext_resource path="res://images/tilesets/ice.tscn" type="PackedScene" id=13]
[ext_resource path="res://images/tilesets/rou.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/premade/spikes/5base.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/light/torch.tscn" type="PackedScene" id=16]
[ext_resource path="res://images/gui/continuesmallpress.png" type="Texture" id=18]
[ext_resource path="res://images/gui/continue.png" type="Texture" id=19]

[sub_resource type="DynamicFont" id=9]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.917647, 0.364706, 0.0627451, 1, 0.878431, 0.74902, 0.164706, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
trail_divisor = 2
emission_shape = 1
emission_sphere_radius = 83.35
flag_disable_z = true
direction = Vector3( -0.821, 0, 0 )
spread = 85.11
gravity = Vector3( 0, 98, 0 )
initial_velocity = 91.43
initial_velocity_random = 0.01
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 0.9
angle_random = 0.24
color_ramp = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 64
outline_size = 2
outline_color = Color( 0.137255, 0.27451, 0.4, 1 )
font_data = ExtResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "go"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 3 )

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
start = ExtResource( 8 )
levels = ExtResource( 9 )

[node name="cam" type="Camera2D" parent="."]
position = Vector2( 320.362, 493.891 )
current = true
smoothing_enabled = true

[node name="settings" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 2.0

[node name="back" type="TextureButton" parent="settings"]
margin_left = 126.0
margin_top = 1.0
margin_right = 166.0
margin_bottom = 41.0
rect_scale = Vector2( -3.13956, 3.13956 )
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 18 )

[node name="cont" type="VBoxContainer" parent="settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -276.0
margin_top = -84.0
margin_right = 276.0
margin_bottom = 84.0
alignment = 1

[node name="progress" type="Button" parent="settings/cont"]
margin_top = 43.0
margin_right = 552.0
margin_bottom = 124.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "delete progress"

[node name="portim" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_top = -114.5
margin_right = 124.0
margin_bottom = 114.5
texture = ExtResource( 2 )

[node name="partic" type="Particles2D" parent="portim"]
position = Vector2( 142, 90.5 )
z_index = 2
amount = 53
process_material = SubResource( 3 )

[node name="god" parent="portim" instance=ExtResource( 10 )]
position = Vector2( 1161, -545.5 )
shadow_color = Color( 1, 1, 1, 0 )
shadow_gradient_length = 0.0

[node name="nature" parent="portim" instance=ExtResource( 11 )]
scale = Vector2( 2, 2 )
z_index = -1
tile_data = PoolIntArray( -655347, 0, 131077, -589812, 0, 196611, -589811, 0, 262144, -524276, 0, 65539, -524275, 0, 196617, -524274, 0, 5, -458742, 0, 196611, -458741, 0, 6, -458740, 0, 65537, -458739, 0, 0, -458738, 0, 4, -393207, 0, 196611, -393206, 0, 65537, -393205, 0, 0, -393204, 0, 0, -393203, 0, 0, -393202, 0, 4, -327673, 0, 196611, -327672, 0, 6, -327671, 0, 65537, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 4, -262137, 0, 65539, -262136, 0, 0, -262135, 0, 0, -262134, 0, 0, -262133, 0, 0, -262132, 0, 0, -262131, 0, 0, -262130, 0, 4, -196601, 0, 65539, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 2, -196594, 0, 196610, -131067, 0, 196611, -131066, 0, 6, -131065, 0, 65537, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 4, -65531, 0, 65539, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 4, 5, 0, 65539, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 4, 65541, 0, 65539, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 4, 131076, 0, 196611, 131077, 0, 65537, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 4, 196611, 0, 196611, 196612, 0, 65537, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 4, 262146, 0, 196611, 262147, 0, 65537, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 4, 327682, 0, 65539, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 4, 393218, 0, 196609, 393219, 0, 3, 393220, 0, 3, 393221, 0, 3, 393222, 0, 3, 393223, 0, 3, 393224, 0, 3, 393225, 0, 3, 393226, 0, 3, 393227, 0, 3, 393228, 0, 3, 393229, 0, 196610 )

[node name="tileset" parent="portim" instance=ExtResource( 12 )]
tile_data = PoolIntArray( -393224, 0, 3, -327688, 0, 65539, -262152, 0, 131075, 589820, 0, 0, 589821, 0, 1, 589822, 0, 1, 589823, 0, 1, 524288, 0, 2, 655356, 0, 65536, 655357, 0, 65537, 655358, 0, 65537, 655359, 0, 65537, 589824, 0, 65538, 720892, 0, 65536, 720893, 0, 65537, 720894, 0, 65537, 720895, 0, 65537, 655360, 0, 65538, 786428, 0, 65536, 786429, 0, 65537, 786430, 0, 65537, 786431, 0, 65537, 720896, 0, 65538, 851964, 0, 65536, 851965, 0, 65537, 851966, 0, 65537, 851967, 0, 65537, 786432, 0, 65538, 917500, 0, 131072, 917501, 0, 196609, 917502, 0, 65537, 917503, 0, 65537, 851968, 0, 65538, 983037, 0, 65536, 983038, 0, 65537, 983039, 0, 65537, 917504, 0, 65538, 1048573, 0, 65536, 1048574, 0, 65537, 1048575, 0, 65537, 983040, 0, 65538, 1114109, 0, 131072, 1114110, 0, 131073, 1114111, 0, 131073, 1048576, 0, 131074, 1245179, 0, 0, 1245180, 0, 262149, 1245181, 0, 262147, 1245182, 0, 262148, 1310714, 0, 262146, 1310715, 0, 262151, 1310716, 0, 131074, 1310719, 0, 196610, 1376253, 0, 196610, 1310720, 0, 196610 )

[node name="5base" parent="portim/tileset" instance=ExtResource( 15 )]
position = Vector2( -69.9507, 327.503 )
scale = Vector2( 0.6, 0.6 )

[node name="5base2" parent="portim/tileset" instance=ExtResource( 15 )]
position = Vector2( -9.95074, 327.503 )
scale = Vector2( 0.6, 0.6 )

[node name="tileout" parent="portim" instance=ExtResource( 12 )]
position = Vector2( 135, 88.5 )
scale = Vector2( 2, 2 )
tile_data = PoolIntArray( -458760, 0, 0, -458759, 0, 2, -458755, 0, 0, -458754, 0, 262149, -458753, 0, 262147, -524288, 0, 262147, -524287, 0, 262147, -524286, 0, 65542, -524283, 0, 0, -524282, 0, 1, -524281, 0, 1, -524280, 0, 1, -524279, 0, 262149, -524278, 0, 262147, -524277, 0, 262148, -393225, 0, 0, -393224, 0, 262145, -393223, 0, 262144, -393222, 0, 1, -393221, 0, 1, -393220, 0, 1, -393219, 0, 262145, -393218, 0, 65538, -458750, 0, 262152, -458749, 0, 1, -458748, 0, 1, -458747, 0, 262145, -458746, 0, 65537, -458745, 0, 65537, -458744, 0, 196608, -458743, 0, 131074, -327689, 0, 65536, -327688, 0, 65537, -327687, 0, 65537, -327686, 0, 65537, -327685, 0, 65537, -327684, 0, 65537, -327683, 0, 65537, -327682, 0, 65538, -393214, 0, 65536, -393213, 0, 65537, -393212, 0, 65537, -393211, 0, 65537, -393210, 0, 65537, -393209, 0, 65537, -393208, 0, 65538, -262153, 0, 65536, -262152, 0, 65537, -262151, 0, 65537, -262150, 0, 65537, -262149, 0, 65537, -262148, 0, 65537, -262147, 0, 65537, -262146, 0, 65538, -327678, 0, 65536, -327677, 0, 65537, -327676, 0, 65537, -327675, 0, 65537, -327674, 0, 196608, -327673, 0, 131073, -327672, 0, 131074, -196617, 0, 65536, -196616, 0, 65537, -196615, 0, 65537, -196614, 0, 65537, -196613, 0, 65537, -196612, 0, 65537, -196611, 0, 65537, -196610, 0, 65538, -262142, 0, 65536, -262141, 0, 65537, -262140, 0, 196608, -262139, 0, 131073, -262138, 0, 131074, -131083, 0, 0, -131082, 0, 1, -131081, 0, 262145, -131080, 0, 65537, -131079, 0, 65537, -131078, 0, 65537, -131077, 0, 65537, -131076, 0, 65537, -131075, 0, 65537, -131074, 0, 65538, -196606, 0, 131072, -196605, 0, 131073, -196604, 0, 131074, -65547, 0, 131072, -65546, 0, 196609, -65545, 0, 65537, -65544, 0, 65537, -65543, 0, 65537, -65542, 0, 65537, -65541, 0, 65537, -65540, 0, 65537, -65539, 0, 65537, -65538, 0, 65538, -10, 0, 65536, -9, 0, 65537, -8, 0, 65537, -7, 0, 65537, -6, 0, 65537, -5, 0, 65537, -4, 0, 65537, -3, 0, 65537, -2, 0, 65538, 65525, 0, 0, 65526, 0, 262145, 65527, 0, 65537, 65528, 0, 196608, 65529, 0, 131073, 65530, 0, 196609, 65531, 0, 65537, 65532, 0, 65537, 65533, 0, 65537, 65534, 0, 65538, 2, 0, 0, 3, 0, 1, 4, 0, 2, 131061, 0, 65536, 131062, 0, 65537, 131063, 0, 65537, 131064, 0, 65538, 131066, 0, 65536, 131067, 0, 65537, 131068, 0, 65537, 131069, 0, 65537, 131070, 0, 65538, 65538, 0, 65536, 65539, 0, 65537, 65540, 0, 262144, 65541, 0, 1, 65542, 0, 1, 65543, 0, 2, 196597, 0, 65536, 196598, 0, 65537, 196599, 0, 65537, 196600, 0, 262144, 196601, 0, 1, 196602, 0, 262145, 196603, 0, 65537, 196604, 0, 65537, 196605, 0, 65537, 196606, 0, 65538, 131074, 0, 65536, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 262144, 131080, 0, 2, 262133, 0, 131072, 262134, 0, 196609, 262135, 0, 65537, 262136, 0, 65537, 262137, 0, 65537, 262138, 0, 65537, 262139, 0, 65537, 262140, 0, 65537, 262141, 0, 65537, 262142, 0, 65538, 196610, 0, 65536, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65537, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 262144, 196617, 0, 2, 327670, 0, 65536, 327671, 0, 65537, 327672, 0, 65537, 327673, 0, 65537, 327674, 0, 65537, 327675, 0, 65537, 327676, 0, 65537, 327677, 0, 65537, 327678, 0, 65538, 262146, 0, 65536, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 262144, 262154, 0, 2, 393206, 0, 131072, 393207, 0, 196609, 393208, 0, 65537, 393209, 0, 65537, 393210, 0, 65537, 393211, 0, 65537, 393212, 0, 65537, 393213, 0, 65537, 393214, 0, 65538, 327682, 0, 65536, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 262144, 327691, 0, 2, 458743, 0, 65536, 458744, 0, 65537, 458745, 0, 65537, 458746, 0, 65537, 458747, 0, 65537, 458748, 0, 65537, 458749, 0, 65537, 458750, 0, 65538, 393218, 0, 65536, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 262144, 393228, 0, 2, 524278, 0, 0, 524279, 0, 262145, 524280, 0, 65537, 524281, 0, 65537, 524282, 0, 65537, 524283, 0, 65537, 524284, 0, 65537, 524285, 0, 65537, 524286, 0, 65538, 458754, 0, 65536, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 196608, 458763, 0, 131073, 458764, 0, 131079, 458765, 0, 262148, 589814, 0, 65536, 589815, 0, 65537, 589816, 0, 65537, 589817, 0, 65537, 589818, 0, 65537, 589819, 0, 65537, 589820, 0, 65537, 589821, 0, 65537, 589822, 0, 262144, 589823, 0, 1, 524288, 0, 1, 524289, 0, 1, 524290, 0, 262145, 524291, 0, 65537, 524292, 0, 65537, 524293, 0, 65537, 524294, 0, 65537, 524295, 0, 65537, 524296, 0, 65537, 524297, 0, 65537, 524298, 0, 65538, 655350, 0, 65536, 655351, 0, 65537, 655352, 0, 65537, 655353, 0, 65537, 655354, 0, 65537, 655355, 0, 65537, 655356, 0, 65537, 655357, 0, 65537, 655358, 0, 65537, 655359, 0, 65537, 589824, 0, 65537, 589825, 0, 65537, 589826, 0, 65537, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 65537, 589830, 0, 65537, 589831, 0, 65537, 589832, 0, 65537, 589833, 0, 65537, 589834, 0, 65538, 720885, 0, 0, 720886, 0, 262145, 720887, 0, 65537, 720888, 0, 65537, 720889, 0, 65537, 720890, 0, 65537, 720891, 0, 65537, 720892, 0, 65537, 720893, 0, 65537, 720894, 0, 65537, 720895, 0, 65537, 655360, 0, 196608, 655361, 0, 131073, 655362, 0, 131073, 655363, 0, 131073, 655364, 0, 131073, 655365, 0, 131073, 655366, 0, 131073, 655367, 0, 131073, 655368, 0, 131073, 655369, 0, 131073, 655370, 0, 131079, 655371, 0, 262148, 786421, 0, 131072, 786422, 0, 131073, 786423, 0, 196609, 786424, 0, 65537, 786425, 0, 196608, 786426, 0, 131073, 786427, 0, 131073, 786428, 0, 131073, 786429, 0, 131073, 786430, 0, 131073, 786431, 0, 131073, 720896, 0, 131074, 851959, 0, 65536, 851960, 0, 196608, 851961, 0, 131074, 917495, 0, 65544, 917496, 0, 131074, 983031, 0, 65539, 1048567, 0, 65539, 1114103, 0, 131075 )

[node name="torch" parent="portim/tileout" instance=ExtResource( 16 )]
position = Vector2( -260.975, 59.7516 )

[node name="ice" parent="portim" instance=ExtResource( 13 )]
z_index = -2
tile_data = PoolIntArray( 131066, 0, 0, 131067, 0, 1, 131068, 0, 2, 196602, 0, 65536, 196603, 0, 65537, 196604, 0, 65539, 196605, 0, 2, 262138, 0, 65536, 262139, 0, 65537, 262140, 0, 65537, 262141, 0, 65539, 262142, 0, 2, 327674, 0, 131072, 327675, 0, 4, 327676, 0, 65537, 327677, 0, 65537, 327678, 0, 65539, 327679, 0, 2, 262149, 0, 0, 262150, 0, 2, 393211, 0, 65536, 393212, 0, 65537, 393213, 0, 65537, 393214, 0, 65537, 393215, 0, 65539, 327680, 0, 2, 327685, 0, 131072, 327686, 0, 131074, 458747, 0, 65536, 458748, 0, 65537, 458749, 0, 65537, 458750, 0, 65537, 458751, 0, 65537, 393216, 0, 65539, 393217, 0, 2, 524283, 0, 65536, 524284, 0, 65537, 524285, 0, 65537, 524286, 0, 65537, 524287, 0, 65537, 458752, 0, 65537, 458753, 0, 65539, 458754, 0, 2, 589819, 0, 65536, 589820, 0, 65537, 589821, 0, 65537, 589822, 0, 65537, 589823, 0, 65537, 524288, 0, 65537, 524289, 0, 65537, 524290, 0, 65539, 524291, 0, 2, 655355, 0, 65536, 655356, 0, 65537, 655357, 0, 65537, 655358, 0, 65537, 655359, 0, 65537, 589824, 0, 65537, 589825, 0, 65537, 589826, 0, 65537, 589827, 0, 65539, 589828, 0, 2, 720891, 0, 65536, 720892, 0, 65537, 720893, 0, 65537, 720894, 0, 65537, 720895, 0, 65537, 655360, 0, 65537, 655361, 0, 65537, 655362, 0, 65537, 655363, 0, 65537, 655364, 0, 65538, 655371, 0, 0, 786427, 0, 65536, 786428, 0, 65537, 786429, 0, 65537, 786430, 0, 65537, 786431, 0, 65537, 720896, 0, 65537, 720897, 0, 65537, 720898, 0, 65537, 720899, 0, 65537, 720900, 0, 65538, 851963, 0, 65536, 851964, 0, 65537, 851965, 0, 65537, 851966, 0, 65537, 851967, 0, 65537, 786432, 0, 65537, 786433, 0, 65537, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65538, 917499, 0, 131072, 917500, 0, 131073, 917501, 0, 131073, 917502, 0, 131073, 917503, 0, 4, 851968, 0, 65537, 851969, 0, 65537, 851970, 0, 65537, 851971, 0, 65537, 851972, 0, 65539, 851973, 0, 2, 983039, 0, 65536, 917504, 0, 65537, 917505, 0, 65537, 917506, 0, 65537, 917507, 0, 65537, 917508, 0, 65537, 917509, 0, 65539, 917510, 0, 2, 1048575, 0, 65536, 983040, 0, 65537, 983041, 0, 65537, 983042, 0, 65537, 983043, 0, 65537, 983044, 0, 65537, 983045, 0, 65537, 983046, 0, 65538, 983047, 0, 0, 1114110, 0, 0, 1114111, 0, 131072, 1048576, 0, 4, 1048577, 0, 3, 1048578, 0, 131073, 1048579, 0, 131073, 1048580, 0, 131073, 1048581, 0, 131073, 1048582, 0, 131074, 1114112, 0, 131072, 1114113, 0, 131074 )

[node name="rou" parent="portim" instance=ExtResource( 14 )]
z_index = -1
show_collision = false
tile_data = PoolIntArray( -983044, 0, 655361, -983043, 0, 262151, -983042, 0, 131080, -983041, 0, 131080, -1048576, 0, 131080, -1048575, 0, 131080, -1048574, 0, 131080, -1048573, 0, 262150, -1048572, 0, 655362, -917507, 0, 524290, -917506, 0, 65537, -917505, 0, 65537, -983040, 0, 65537, -983039, 0, 65537, -983038, 0, 327686, -983037, 0, 393222, -851972, 0, 1179652, -851971, 0, 196609, -851970, 0, 65537, -851969, 0, 65537, -917504, 0, 65537, -917503, 0, 327686, -917502, 0, 393222, -786435, 0, 458761, -786434, 0, 65537, -786433, 0, 65537, -851968, 0, 327686, -851967, 0, 393222, -720899, 0, 327682, -720898, 0, 327686, -720897, 0, 458758, -786432, 0, 589830, -655364, 0, 720897, -655363, 0, 327685, -655362, 0, 458760, -589828, 0, 655365, -589827, 0, 196611, -589826, 0, 655366, -524291, 0, 1179651, -196608, 0, 6, -3, 0, 6, 1, 0, 6, 196604, 0, 196617, 262140, 0, 262144, 458752, 0, 6, 589825, 0, 655361, 589826, 0, 196614, 655362, 0, 786432 )

[node name="go" type="Button" parent="portim"]
margin_left = 16.0
margin_top = 189.5
margin_right = 252.0
margin_bottom = 255.5
custom_fonts/font = SubResource( 4 )
shortcut = SubResource( 6 )
text = "START"
clip_text = true
expand_icon = true

[node name="logo" type="Sprite" parent="portim"]
position = Vector2( 145, 108.5 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="LevelSelection" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -197.0
margin_top = -196.0
margin_right = -119.0
margin_bottom = -117.0
rect_scale = Vector2( 1.93674, 1.93674 )
icon = ExtResource( 7 )
flat = true
icon_align = 1
expand_icon = true

[node name="Settings" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 83.0
margin_top = -155.0
margin_right = 243.0
margin_bottom = -89.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "SETS"

[connection signal="pressed" from="settings/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="settings/cont/progress" to="." method="_on_progress_pressed"]
[connection signal="pressed" from="portim/go" to="." method="_on_go_pressed"]
[connection signal="pressed" from="LevelSelection" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
